# perception-projection

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Homography.cpp  Homography.hpp  Main.cpp  Omnidirectional.cpp  Omnidirectional.hpp  OmnidirectionalConfig.hpp  StereoTriangulation.hpp  reproject.cpp
test/: CMakeLists.txt  omni_calibration.txt  test_Dummy.cpp  test_Omnicam.cpp  test_Projection.cpp  test_Triangulation.cpp
